check_errors.txt
cargo : warning: unused import: `PathBuilder`
At line:1 char:1
+ cargo check -p server --test integrationtest 2>&1 | Out-File 
-FilePat ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused im 
   port: `PathBuilder`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
 --> common\src\path.rs:3:46
  |
3 |     path::{Path, PathEvent, builder::{Build, PathBuilder}},
  |                                              ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) 
on by default

warning: unused import: `Build`
 --> common\src\path.rs:3:39
  |
3 |     path::{Path, PathEvent, builder::{Build, PathBuilder}},
  |                                       ^^^^^

warning: `common` (lib) generated 2 warnings
    Checking server v0.1.0 
(C:\Users\joela\dev\lasertargets\server)
warning: unused imports: `net::Ipv4Addr` and `time::Duration`
 --> server\src\plugins\network.rs:8:11
  |
8 | use std::{net::Ipv4Addr, net::Ipv6Addr, time::Duration};
  |           ^^^^^^^^^^^^^                 ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) 
on by default

warning: `server` (lib) generated 1 warning (run `cargo fix 
--lib -p server` to apply 1 suggestion)
error[E0412]: cannot find type `FromClientMessage` in this scope
  --> server\test\util.rs:37:33
   |
37 |     mut messages: MessageReader<FromClientMessage>,
   |                                 ^^^^^^^^^^^^^^^^^ not 
found in this scope
   |
help: consider importing this struct
   |
 1 + use server::plugins::network::FromClientMessage;
   |

warning: unused import: `bevy_quinnet::shared::ClientId`
 --> server\test\util.rs:8:5
  |
8 | use bevy_quinnet::shared::ClientId;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) 
on by default

warning: unused imports: `SERVER_HOST` and `SERVER_PORT`
 --> server\test\util.rs:9:39
  |
9 | use common::network::{NetworkMessage, SERVER_HOST, 
SERVER_PORT};
  |                                       ^^^^^^^^^^^  
^^^^^^^^^^^

warning: unused imports: `net::Ipv6Addr` and `time::Duration`
  --> server\test\util.rs:10:26
   |
10 | use std::{net::Ipv4Addr, net::Ipv6Addr, time::Duration};
   |                          ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain 
E0412`.
warning: `server` (test "integrationtest") generated 3 warnings
error: could not compile `server` (test "integrationtest") due 
to 1 previous error; 3 warnings emitted
